unpackaged/main/default/objects/Promocion__c/Promocion__c.object-meta.xml
<CustomObject>
    <label>Material de Apoyo</label>
    <nameField>
        <displayFormat>MA{000000}</displayFormat>
        <label>Material de Apoyo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Materiales de Apoyo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>