unpackaged/main/default/objects/Promocion__c/fields/Asunto__c.field-meta.xml
<CustomField>
    <fullName>Asunto__c</fullName>
    <description>Subject Name</description>
    <label>Titulo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>