unpackaged/main/default/objects/Promocion__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripcion</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>