unpackaged/main/default/objects/Promocion__c/fields/Fecha_de_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Inicio__c</fullName>
    <label>Fecha de Inicio</label>
    <type>Date</type>
</CustomField>