unpackaged/main/default/objects/Promocion__c/fields/Fechas_Validas__c.field-meta.xml
<CustomField>
    <fullName>Fechas_Validas__c</fullName>
    <formula>IF(TODAY()  &gt;=  Fecha_de_Inicio__c  &amp;&amp; TODAY() &lt;=  Fecha_Final__c, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fechas Validas?</label>
    <type>Checkbox</type>
</CustomField>