unpackaged/main/default/objects/Promocion__c/fields/Imagen__c.field-meta.xml
<CustomField>
    <fullName>Imagen__c</fullName>
    <inlineHelpText>300x300px</inlineHelpText>
    <label>Imagen</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>