unpackaged/main/default/objects/Promocion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asunto__c</columns>
    <columns>Activo__c</columns>
    <columns>Fraccionamiento__c</columns>
    <columns>Descripcion__c</columns>
    <columns>Fecha_de_Inicio__c</columns>
    <columns>Fecha_Final__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>